[package]
name = "gu-exec-env-driver-wasm"
version = "0.1.0"
authors = ["Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=['gu-wasm-env-api']

[dependencies]
structopt = "0.3.1"
serde_json="1.0.40"
failure = "0.1.5"
zip="0.5.3"
uuid = { version = "0.7", features = ["serde", "v4"] }
gu-wasm-env-api={ path="./gu-wasm-env-api" }


[dependencies.serde]
version = "1.0.99"
features=['derive']

[dependencies.sp-wasm-engine]
git="https://github.com/golemfactory/sp-wasm.git"
branch="wasm-runner"

[dependencies.gu-model]
git="https://github.com/golemfactory/golem-unlimited.git"
branch="feature/wasm"
default-features=false

[package.metadata.deb]
depends = "$auto, gu-provider"
assets = [
    ["target/release/gu-exec-env-driver-wasm", "usr/lib/golemu/plugins/WasmExecEnv.gu-plugin/", "755"],
    ["gu-plugin.json", "usr/lib/golemu/plugins/WasmExecEnv.gu-plugin/", "644"],
]

maintainer-scripts = "deb"

