[package]
name = "gu-wasm-env-api"
version = "0.1.0"
authors = ["Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde]
version = "1.0.99"
features=['derive']

[dev-dependencies]
serde_json="1.0.40"
